working now with hardcoded data

--- a/child_image/hci_rpmsg.conf
+++ b/child_image/hci_rpmsg.conf
@@ -7,3 +7,7 @@
 CONFIG_BT_EXT_ADV=y
 CONFIG_BT_CTLR_ADV_EXT=y
 CONFIG_BT_CTLR_PHY_CODED=y
+
+# enable more bytes to be in advertisements (needed for the larger payload in extended advertisement to work). Range: 31 1650
+# docs: https://developer.nordicsemi.com/nRF_Connect_SDK/doc/1.9.2-dev1/kconfig/CONFIG_BT_CTLR_ADV_DATA_LEN_MAX.html
+CONFIG_BT_CTLR_ADV_DATA_LEN_MAX=128
