--- a/prj.conf
+++ b/prj.conf
@@ -1,8 +1,39 @@
-#
-# Copyright (c) 2020 Nordic Semiconductor
-#
-# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
-#
+# #
+# # Copyright (c) 2020 Nordic Semiconductor
+# #
+# # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
+# #
+
+# CONFIG_NCS_SAMPLES_DEFAULTS=y
+# CONFIG_DK_LIBRARY=y
+
+# CONFIG_BT=y
+# CONFIG_BT_DEBUG_LOG=y
+# CONFIG_BT_PERIPHERAL=y
+# CONFIG_BT_DEVICE_NAME="Z-RID"
+# CONFIG_BT_BAS=y
+# CONFIG_BT_HRS=y
+
+# CONFIG_BT_DEVICE_APPEARANCE=833
+# CONFIG_BT_HCI_VS=y
+# CONFIG_BT_HCI_VS_EXT=y
+# CONFIG_BT_SETTINGS=y
+# CONFIG_FLASH=y
+# CONFIG_FLASH_PAGE_LAYOUT=y
+# CONFIG_FLASH_MAP=y
+# CONFIG_NVS=y
+# CONFIG_SETTINGS=y
+# CONFIG_MPU_ALLOW_FLASH_WRITE=y
+
+# CONFIG_BT_CTLR_PHY_CODED=y
+# CONFIG_BT_CTLR_ADV_EXT=y
+
+# CONFIG_NEWLIB_LIBC=y
+
+# CONFIG_BT_EXT_ADV=y
+# CONFIG_BT_USER_PHY_UPDATE=y
+
+
 
 CONFIG_NCS_SAMPLES_DEFAULTS=y
 CONFIG_DK_LIBRARY=y
@@ -10,12 +41,21 @@ CONFIG_DK_LIBRARY=y
 CONFIG_BT=y
 CONFIG_BT_DEBUG_LOG=y
 CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_DEVICE_NAME="Nordic_HRS"
+CONFIG_BT_DEVICE_NAME="Z-RID"
 CONFIG_BT_BAS=y
 CONFIG_BT_HRS=y
 
+# CONFIG_BT_CTLR=y
 CONFIG_BT_CTLR_PHY_CODED=y
 CONFIG_BT_CTLR_ADV_EXT=y
 
 CONFIG_BT_EXT_ADV=y
 CONFIG_BT_USER_PHY_UPDATE=y
+
+
+# To allow use of math.h
+CONFIG_NEWLIB_LIBC=y
+
+
+# To prevent Stack Overflows from opendroneid.h
+CONFIG_MAIN_STACK_SIZE=16384
