--- a/prj_nrf5340dk_nrf5340_cpuapp.conf
+++ b/prj_nrf5340dk_nrf5340_cpuapp.conf
@@ -14,5 +14,8 @@ CONFIG_BT_DEVICE_NAME="Nordic_HRS"
 CONFIG_BT_BAS=y
 CONFIG_BT_HRS=y
 
+CONFIG_BT_CTLR_PHY_CODED=y
+CONFIG_BT_CTLR_ADV_EXT=y
+
 CONFIG_BT_EXT_ADV=y
 CONFIG_BT_USER_PHY_UPDATE=y
